less/dark-mode.less
.light-variables() {
  --epaper-background: #eceae6;
  --fact-box-color: #f7f5f3;
  --login-modal-background: #fff;
  --footer-color: #f7f5f3;
  --footer-text-color: #999999;
  --header-color: #333;
  --link-color: #00698e;
  --site-background: #ffffff;
  --header-separator-color: #dcd9d7;
  --asidelist-padding: 0 0 15px 0;
  --profile-color: @grey-medium;
  --profile-border-color: @grey-almostlight;

  --vetrina-background: #fff;
  --vetrina-footer-background: #eceae6;
  --vetrina-link-color: #00A1AB;
  --vetrina-text-color: var(--text-color);
}

.dark-variables() {
  --epaper-background: var(--group-content-bg);
  --fact-box-color: var(--group-content-bg);
  --login-modal-background: var(--group-content-bg);
  --footer-color: #000;
  --footer-text-color: #cccccc;
  --header-color: #eee;
  --link-color: var(--color-blue);
  --site-background: #121314;
  --header-separator-color: #757575;
  --asidelist-padding: 15px;
  --profile-color: var(--color-white);
  --profile-border-color: var(--color-white);

  --vetrina-background: var(--group-content-bg);
  --vetrina-footer-background: #25292b;
  --vetrina-link-color: #00A1AB;
  --vetrina-text-color: var(--text-color);

  body {
      background-color: black;
  }

  .article-element__html a:hover {
      color: #999;
  }
}

.theme-hbl-fi,
.theme-hbl-fi-variables .theme-hbl-fi,
.theme-hbl-fi-variables {
  .light-variables();
  @media (prefers-color-scheme: dark) {
    .dark-variables();
  }
}
.theme-hbl-fi-light-variables .theme-hbl-fi,
.theme-hbl-fi-light-variables {
  .light-variables();
}
.theme-hbl-fi-dark-variables .theme-hbl-fi,
.theme-hbl-fi-dark-variables {
  .dark-variables();
}

